# visualization-machine-learning

./: .gitignore  2013_nonlinear_fitting.m  2013_nonlinear_fitting.py  2013_nonlinear_fitting_3d.m  2013_nonlinear_fitting_3d.py  2013_nonlinear_fitting_3d_lmdb_save.py  2013_nonlinear_fitting_view_process.py  AGENTS.md  Boruta_Feature_Selection.R  Boruta_Madelon.R  Boruta_Ozone.R  DecisionTreeClassifier.py  Deep_Learning_Fundamentals.md  FSelector_feature_selection.R  MNIST_torch.py  Makefile  README-ZH.md  README.md  WIP_BayesianNetwork.py  apriori.R  article_title_and_readcount_rels.py  attention_seq2seq_history.md  attention_visualization.py  bayes.R  c50.R  c50_credit_model_summary.txt  calculator_nn2.py  convex_optimization_visualization.py  convex_optimization_visualization_pytorch.py  corpus_ai.py  create_placeholder_images.py  cuda_install.sh  derivative_pytorch.py  derivative_pytorch_visualization.py  derivative_pytorch_visualization2.py  derivative_pytorch_visualization3.py  discrete_to_differentiable_visualization.py  distributional_semantics_with_wordspace.R  drive_torch_dqn_nocnn.py  eigenvector_visualization.py  (+68 more)
R-Lang-machine-learning/: README.md  bayes.R  binomial_distribution.R  caret_churn_importance.R  children_ever_born.R  glm_poisson.R  neuralnet.R  ocr_svm.R  svd_compression_image.R  todos-apriori-1.R  todos-apriori.R
benchmark/: README.md  cuda_benchmark.py  mps_benchmark.py
deep_learning_basic_funcs/: sgd_visualization.py  sgd_visualization_animation.py  softmax_graph.m
derivative_pytorch/: derivative_pytorch_visualization2.py  (+2 more)
webapp/: app.py
(+67 files in other folders)
