[tool.poetry]
name = "emacspy-machine-learning"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
tensorboard = "^2.17.1"
numpy = "^2.1.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
torchtext = "^0.18.0"
nltk = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
