[tool.poetry]
name = "emacspy-machine-learning"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
torchvision = "^0.17.2"
tensorboard = "^2.17.1"
numpy = "^2.1.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
torchtext = "^0.17.2"
nltk = "^3.9.1"
gymnasium = {extras = ["classic-control", "box2d"], version = "^0.29.1"}
wikiextractor = "^3.0.6"
wikipedia-api = "^0.7.1"
python-socketio = "^5.11.3"
flask-socketio = "^5.3.6"
jieba = "^0.42.1"
fastapi-socketio = "^0.0.10"
fastapi-cors = "^0.0.6"
pgmpy = "^0.1.26"
bottleneck = "^1.4.0"
faiss-cpu = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
